# Memory-Allocation-Simulator

./: .env.example  .gitignore  CMakeLists.txt  DEPLOYMENT.md  DEPLOY_NOW.md  Dockerfile  GO_LIVE.md  LAUNCH_READY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_NEW.md  RENDER_DEPLOY.md  START_HERE.md  os.cpp  package.json  render.yaml  server.js
.github/workflows/: ci-cd.yml
public/: index.html  script.js  styles.css
